fix(node): add try/finally and TimeoutException handling to CommandsTriggerTest
Align with Shell test patterns: wrap worker/scheduler cleanup in
try/finally with individual catch blocks, and handle TimeoutException
from Await.until() for clearer failure messages.